<resources>
    <string name="app_name">Strava Run Analyzer</string>
    <string name="team">Andrew, Matt, Conor</string>
    <string name="log_in">Log In</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="title_activity_login">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="listen_button">Enter Number of Runs</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="empty_fields">All fields must be filled!</string>
    <string name="connect">Connect to Activites</string>
    <string name="view_data">View Data</string>
</resources>