<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- view for AdMob Interstitial Ad -->
    <TableRow>
        <TextView
            android:id="@+id/app_name"
            style="@style/TitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/level"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
    </TableRow>

    <TableRow>
        <EditText
            android:id="@+id/username"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            />
    </TableRow>

    <TableRow>
        <EditText
            android:id="@+id/password"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/next_level_button"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:onClick="onClick"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/label"
            style="@style/TextTheme"
            android:textColor="#FF0000"
        />
    </TableRow>

</TableLayout>